# p6

./: .gitignore  CMakeLists.txt  README.md  ej1.c  ej2.c  ej3.c  ej4.c  ej5.c  filosofo.c  filosofo_mod.c  inic_filosofos.c  inic_filosofos_mod.c  man_msgctl.txt  man_msgget.txt  man_msgrcv.txt  proveedor.c
